Styles: add stylesheet and folder img

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Proyecto Web</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -213,7 +217,7 @@
     <footer>
         <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae veritatis neque id nam ullam ipsam officia iusto eius. Ipsa quibusdam p</h2>
         <a href="" class="btn-primary">try it for free</a>
-        
+
     </footer>
 </body>
 </html>
